--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@styled-icons/fa-brands": "10.0.0",
+    "@styled-icons/feather": "10.0.0",
     "next": "latest",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
