--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "dependencies": {
     "@styled-icons/fa-brands": "10.0.0",
     "@styled-icons/feather": "10.0.0",
-    "next": "latest",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "styled-components": "^5.0.0"
+    "next": "9.4.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "styled-components": "5.1.0"
   },
   "devDependencies": {
     "@types/node": "14.0.5",
@@ -21,7 +21,7 @@
     "@types/styled-components": "5.1.0",
     "@typescript-eslint/eslint-plugin": "3.0.0",
     "@typescript-eslint/parser": "3.0.0",
-    "babel-plugin-styled-components": "^1.10.0",
+    "babel-plugin-styled-components": "1.10.7",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "3.1.3",
