--- a/package.json
+++ b/package.json
@@ -10,26 +10,28 @@
     "@styled-icons/fa-brands": "10.34.0",
     "@styled-icons/feather": "10.34.0",
     "i-stand": "1.1.0",
-    "next": "10.2.3",
+    "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "5.3.0"
   },
   "devDependencies": {
-    "@types/node": "15.12.2",
-    "@types/react": "17.0.10",
-    "@types/react-dom": "17.0.7",
-    "@types/styled-components": "5.1.10",
-    "@typescript-eslint/eslint-plugin": "4.26.1",
-    "@typescript-eslint/parser": "4.26.1",
-    "babel-plugin-styled-components": "1.12.0",
+    "@types/node": "16.4.10",
+    "@types/react": "17.0.15",
+    "@types/react-dom": "17.0.9",
+    "@types/styled-components": "5.1.11",
+    "@typescript-eslint/eslint-plugin": "4.29.0",
+    "@typescript-eslint/parser": "4.29.0",
+    "babel-plugin-styled-components": "1.13.2",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "prettier": "2.3.1",
-    "typescript": "4.3.2"
+    "prettier": "2.3.2",
+    "typescript": "4.3.5"
   },
   "license": "ISC"
 }
