--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,8 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
     "plugin:jsx-a11y/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "next"
   ],
   "rules": {
     "prettier/prettier": ["error", {}, { "usePrettierrc": true }],
