--- a/package.json
+++ b/package.json
@@ -6,32 +6,36 @@
     "build": "next build",
     "start": "next start"
   },
+  "resolutions": {
+    "@types/react": "^18.0.21"
+  },
   "dependencies": {
-    "@styled-icons/fa-brands": "10.34.0",
-    "@styled-icons/feather": "10.34.0",
+    "@styled-icons/boxicons-logos": "10.46.0",
+    "@styled-icons/fa-brands": "10.46.0",
+    "@styled-icons/feather": "10.46.0",
     "i-stand": "1.1.0",
-    "next": "11.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "5.3.0"
+    "next": "12.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "styled-components": "5.3.6"
   },
   "devDependencies": {
-    "@types/node": "16.4.10",
-    "@types/react": "17.0.15",
-    "@types/react-dom": "17.0.9",
-    "@types/styled-components": "5.1.11",
-    "@typescript-eslint/eslint-plugin": "4.29.0",
-    "@typescript-eslint/parser": "4.29.0",
-    "babel-plugin-styled-components": "1.13.2",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.0.1",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "3.4.0",
-    "eslint-plugin-react": "7.24.0",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "prettier": "2.3.2",
-    "typescript": "4.3.5"
+    "@types/node": "18.7.23",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.6",
+    "@types/styled-components": "5.1.26",
+    "@typescript-eslint/eslint-plugin": "5.38.1",
+    "@typescript-eslint/parser": "5.38.1",
+    "babel-plugin-styled-components": "2.0.7",
+    "eslint": "8.24.0",
+    "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.31.8",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "prettier": "2.7.1",
+    "typescript": "4.8.4"
   },
   "license": "ISC"
 }
